Apply CurrencyEditText widget
https://stackoverflow.com/a/45299775
https://github.com/PhanVanLinh/AndroidCurrencyEditText

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,8 @@
         -->
     </style>
 
+    <style name="MyDialog" parent="Theme.AppCompat.Dialog">
+        <item name="windowNoTitle">true</item>
+    </style>
+
 </resources>
