--- a/app/src/main/res/layout/activity_holding.xml
+++ b/app/src/main/res/layout/activity_holding.xml
@@ -40,7 +40,7 @@
         android:layout_marginTop="60dp"
         android:text="Avg Price :" />
 
-    <EditText
+    <com.shimnssso.mycointong.widget.CurrencyEditText
         android:id="@+id/editAvgPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
