--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -47,24 +46,25 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/layout_updown"
         android:layout_width="match_parent"
         android:layout_height="42dp"
         android:layout_gravity="bottom"
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btn_cancel"
+            android:id="@+id/btn_up"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Cancel" />
+            android:text="Up" />
 
         <Button
-            android:id="@+id/btn_confirm"
+            android:id="@+id/btn_down"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Confirm" />
+            android:text="Down" />
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
