--- a/app/src/main/res/layout/listview_item_setting.xml
+++ b/app/src/main/res/layout/listview_item_setting.xml
@@ -6,23 +6,8 @@
 
     <CheckBox
         android:id="@+id/chk_coinName"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
         android:text="CoinName" />
-
-    <Button
-        android:id="@+id/btn_down"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Down" />
-
-    <Button
-        android:id="@+id/btn_up"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Up" />
 
 </LinearLayout>
