--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -10,7 +10,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textSize="25sp"
-        android:text="Add Coins" />
+        android:text="@string/title_activity_add" />
 
     <Button
         android:id="@+id/btn_add"
@@ -19,7 +19,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:text="Add" />
+        android:text="@string/add" />
 
     <Button
         android:id="@+id/btn_cancel"
@@ -28,7 +28,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:text="Cancel" />
+        android:text="@string/cancel" />
 
     <ListView
         android:id="@+id/listView"
