--- a/app/src/main/res/layout/activity_holding.xml
+++ b/app/src/main/res/layout/activity_holding.xml
@@ -10,7 +10,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="CoinName"
+        android:text="@string/title_activity_holding"
         android:textAlignment="center"
         android:textSize="25sp" />
 
@@ -21,7 +21,7 @@
         android:layout_alignBottom="@+id/btnCancel"
         android:layout_alignParentRight="true"
         android:layout_toRightOf="@+id/btnCancel"
-        android:text="Confirm" />
+        android:text="@string/confirm" />
 
     <Button
         android:id="@+id/btnCancel"
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:text="Cancel" />
+        android:text="@string/cancel" />
 
     <TextView
         android:id="@+id/textPrice"
@@ -38,7 +38,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="60dp"
-        android:text="Avg Price :" />
+        android:text="@string/avg_price" />
 
     <com.shimnssso.mycointong.widget.CurrencyEditText
         android:id="@+id/editAvgPrice"
@@ -56,7 +56,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="110dp"
-        android:text="Quantity :" />
+        android:text="@string/quantity" />
 
     <EditText
         android:id="@+id/editQuantity"
