--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,4 +20,21 @@
         </menu>
     </item>
 
+    <item
+        android:id="@+id/nav_exchange_rate"
+        android:title="@string/nav_exchange_rate">
+        <menu>
+            <item
+                android:id="@+id/nav_usdkrw"
+                android:title="USD/KRW" />
+            <item
+                android:id="@+id/nav_usdjpy"
+                android:title="USD/JPY" />
+            <item
+                android:id="@+id/nav_update_exchange_rate"
+                android:title="@string/nav_update_exchange_rate" />
+        </menu>
+    </item>
+
+
 </menu>
