--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -104,6 +104,29 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/percentKimp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="4"
+                android:gravity="right|center"
+                android:textSize="10sp" />
+
+            <TextView
+                android:id="@+id/priceDollar"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="6"
+                android:gravity="right|center"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
                 android:id="@+id/priceChange"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
